--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -47,6 +47,9 @@
   "app.errors.unableToLoad": "Unable to load!",
   "app.errors.unexpectedError": "Something unexpected happened. Please retry.",
   "app.errors.unknowError": "Unknown error.",
+  "button.buySellAda": "Buy/Sell ADA",
+  "buysell.dialog.description": "!!!Cardano is the first provably secure proof of stake protocol",
+  "buysell.dialog.title": "!!!Buy / Sell ADA",
   "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "There is no transaction to be sent.",
   "daedalusTransfer.error.transferFundsError": "Unable to transfer funds.",
@@ -70,9 +73,11 @@
   "global.copyTooltipMessage": "Copied",
   "global.errors.fieldIsRequired": "This field is required.",
   "global.errors.invalidPaperPassword": "Paper Wallet password requires at least 10 characters.",
+  "global.errors.invalidPin": "Invalid Pin",
   "global.errors.invalidRepeatPassword": "Doesn't match.",
   "global.errors.invalidWalletName": "Wallet name requires at least 1 and at most 40 letters.",
   "global.errors.invalidWalletPassword": "Spending password requires at least 10 characters.",
+  "global.errors.pinDoesNotMatch": "Pin Does Not Match",
   "global.invalidKeyFormat.label": "Invalid key. Should be hexadecimal-encoded.",
   "global.invalidKeyLength.label": "Invalid key. Should be {length} characters long.",
   "global.invalidKeyLength2.label": "Invalid key. Should one of {lengths}.",
@@ -107,13 +112,13 @@
   "global.labels.note": "Note:",
   "global.labels.optionalMemo": "Memo (optional)",
   "global.labels.processing": "Processing...",
-  "global.labels.register": "Register",
   "global.labels.remove": "Remove",
   "global.labels.rewardsLabel": "Rewards",
   "global.labels.save": "Save",
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Spending key",
   "global.labels.spendingKeyHash": "Spending key hash",
+  "global.labels.stakepool": "!!!Stakepool Name",
   "global.labels.stakingKey": "Staking key",
   "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "Upgrade",
@@ -132,8 +137,8 @@
   "global.language.spanish": "Español",
   "global.language.turkish": "Turkish",
   "global.passwordInstructionsPaperWallet": "Note: Paper Wallet password needs to be at least <strong>10 characters</strong> long.",
-  "global.selectAsset.labael": "Select asset",
   "global.publicKey.explanation": "Public keys allow seeing the wallet history for the wallet, but does <strong>not</strong> allow to spend or move the funds in any way (private key is <strong>not</strong> included)",
+  "global.selectAsset.labael": "Select asset",
   "global.staleTxnWarningLine1": "Your wallet has changed since you created this transaction.",
   "global.staleTxnWarningLine2": "You can still send this transaction but it may fail.",
   "global.uriExplanation": "These allow you to easily share invoices with friends and businesses by simply clicking a URL.",
@@ -710,13 +715,13 @@
   "wallet.transaction.state.pending": "pending",
   "wallet.transaction.transactionAmount": "Transaction amount",
   "wallet.transaction.transactionId": "Transaction ID",
+  "wallet.transaction.transactionMetadata": "Transaction Metadata",
   "wallet.transaction.type": "{currency} transaction",
   "wallet.transaction.type.exchange": "Exchange",
   "wallet.transaction.type.intrawallet": "{currency} intrawallet transaction",
   "wallet.transaction.type.multiparty": "{currency} multiparty transaction",
   "wallet.transaction.withdraw": "Withdraw",
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
-  "wallet.transaction.transactionMetadata": "Transaction Metadata",
   "wallet.transfer.cards.byron": "Byron-era wallet",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
   "wallet.transfer.deregister.deregister": "Deregister",
@@ -734,9 +739,25 @@
   "wallet.undelegation.transaction.explanationLine2": "It will take 2 epochs after the end of the current epoch for undelegation to take effect",
   "wallet.unsupported.subtitle": "The selected wallet does not support this functionality",
   "wallet.unsupported.title": "Wallet type not supported",
-  "wallet.voting.transaction.success.button.label": "Dashboard page",
-  "wallet.voting.transaction.success.explanation": "Explainer TODO",
-  "wallet.voting.transaction.success.title": "Successfully Registered",
+  "wallet.voting.dialog.completeLabel": "Complete",
+  "wallet.voting.dialog.confirmPin": "Confirm PIN",
+  "wallet.voting.dialog.registerLabel": "Register",
+  "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
+  "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
+  "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
+  "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
+  "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
+  "wallet.voting.dialog.step.register.line1": "Enter your spending password to be able to generate the required certificate for voting.",
+  "wallet.voting.dialog.step.trx.line1": "Confirm your spending password to register in the blockchain the certificate previously generated for voting.",
+  "wallet.voting.dialog.stepConfirm": "Confirm",
+  "wallet.voting.dialog.stepPin": "PIN",
+  "wallet.voting.dialog.stepQrCode": "QR Code",
+  "wallet.voting.dialog.title": "Register for Voting",
+  "wallet.voting.dialog.transactionLabel": "Transaction",
+  "wallet.voting.line2": "Before you begin, make sure to complete steps below",
+  "wallet.voting.line3": "Download the Catalyst Voting App.",
+  "wallet.voting.line4": "Open the Catalyst Voting App and click on the Complete registration button.",
+  "wallet.voting.lineTitle": "Register to vote on Fund 3",
   "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} {ticker} from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copy to clipboard",
   "widgets.explorer.tooltip": "Go to {websiteName}",
@@ -758,27 +779,5 @@
   "yoroiTransfer.waiting.checkingAddresses.generatingTx": "Generating transfer transaction",
   "yoroiTransfer.waiting.progressInfo.checkingAddresses": "Checking addresses funds",
   "yoroiTransfer.waiting.progressInfo.restoringAddresses": "Fetching addresses",
-  "yoroiTransfer.waiting.title.label": "Wallet is being restored",
-  "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
-  "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
-  "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
-  "wallet.voting.dialog.step.register.line1": "Enter your spending password to be able to generate the required certificate for voting.",
-  "wallet.voting.lineTitle": "Register to vote on Fund 3",
-  "wallet.voting.line2": "Before you begin, make sure to complete steps below",
-  "wallet.voting.line3": "Download the Catalyst Voting App.",
-  "wallet.voting.line4": "Open the Catalyst Voting App and click on the Complete registration button.",
-  "wallet.voting.dialog.step.trx.line1": "Confirm your spending password to register in the blockchain the certificate previously generated for voting.",
-  "wallet.voting.dialog.stepPin": "PIN",
-  "wallet.voting.dialog.stepConfirm": "Confirm",
-  "wallet.voting.dialog.registerLabel": "Register",
-  "wallet.voting.dialog.transactionLabel": "Transaction",
-  "wallet.voting.dialog.stepQrCode": "QR Code",
-  "wallet.voting.dialog.title": "Register for Voting",
-  "wallet.voting.dialog.confirmPin": "Confirm PIN",
-  "wallet.voting.dialog.completeLabel": "Complete",
-  "global.errors.pinDoesNotMatch": "Pin Does Not Match",
-  "global.errors.invalidPin": "Invalid Pin",
-  "button.buySellAda": "Buy/Sell ADA"
+  "yoroiTransfer.waiting.title.label": "Wallet is being restored"
 }
