--- a/app/i18n/locales/zh-Hans.json
+++ b/app/i18n/locales/zh-Hans.json
@@ -48,9 +48,9 @@
   "app.errors.unexpectedError": "发生意外错误。请重试。",
   "app.errors.unknowError": "未知错误。",
   "button.buySellAda": "买/卖 ADA",
-  "buysell.dialog.instructions": "Please select your preferences. On the next screen, confirm your selection by pressing the green arrow on the top right",
-  "buysell.dialog.manual": "I will add my address manually",
-  "buysell.dialog.selectAddress": "Please select the receiving address. This will be shared with the third party provider called Changelly for the buy / sell of ADA. ",
+  "buysell.dialog.instructions": "请选择您的偏好。在下一个屏幕，按下右上方的绿色箭头确认您的选择",
+  "buysell.dialog.manual": "我会手动添加我的地址",
+  "buysell.dialog.selectAddress": "请选择接收地址。该地址会分享给第三方服务商Changelly用于买卖ADA。 ",
   "buysell.dialog.title": "买/卖 ADA",
   "crash.screen.title": "Yoroi意外终止",
   "daedalusTransfer.error.noTransferTxError": "没有要发送的交易。",
@@ -383,7 +383,7 @@
   "wallet.address.category.group": "使用支付密钥和权益密钥的组合创建的地址",
   "wallet.address.category.p2pk": "直接从公钥创建的地址",
   "wallet.address.category.reward": "委托密钥地址",
-  "wallet.address.category.single": "Addresses containing only a spending key and no staking key",
+  "wallet.address.category.single": "仅有消费密钥而无委托密钥的地址",
   "wallet.amountInput.feesLabel": "+ {amount} 手续费",
   "wallet.backup.dialog.legacy.checkConfirm": "检查您的钱包是否需要升级？",
   "wallet.backup.dialog.legacy.explanation": "如果你的钱包（2019年11月29日前）中有ADA，你需要将您的钱包升级至Shelley钱包。",
@@ -456,10 +456,10 @@
   "wallet.dashboard.graphType.costs": "花费",
   "wallet.dashboard.graphType.positions": "位置",
   "wallet.dashboard.lessthan.header": "有很多因素导致您获得的奖励少于预期。我们在这里列出一些常见的原因：",
-  "wallet.dashboard.lessthan.reason1": "您所授权的权益池曾经是或目前正处于脱机状态，因此没有生成块",
+  "wallet.dashboard.lessthan.reason1": "您委托的权益池曾经是或目前正处于脱机状态，因此没有生成块",
   "wallet.dashboard.lessthan.reason2": "自您委托以来，时间不足",
-  "wallet.dashboard.lessthan.reason4": "您授权的权益池收取的固定费用大于池中总奖励",
-  "wallet.dashboard.lessthan.reason5": "您要授权的权益池曾经或已经饱和",
+  "wallet.dashboard.lessthan.reason4": "您委托的权益池收取的固定费用大于池中总奖励",
+  "wallet.dashboard.lessthan.reason5": "您要委托的权益池曾经或已经饱和",
   "wallet.dashboard.lessthan.title": "奖励缺失说明",
   "wallet.dashboard.poolWarnings.censoringTxs": "特意从区块中排除交易 (审查网络)",
   "wallet.dashboard.poolWarnings.explanation": "工作量证明 (PoW) 区块链的用户对不良行为没有任何办法，而卡尔达诺等权益证明 (PoS) 区块链则与之不同，赋予了用户权力以惩罚不良行为者",
@@ -526,7 +526,7 @@
   "wallet.includeKey.explanationLine1": "Do you want to include your wallet's <strong>public</strong> key in the error logs?",
   "wallet.includeKey.withKeyLabel": "With key",
   "wallet.includeKey.withoutKeyLabel": "Without key",
-  "wallet.insufficientFunds.subtitle": "Participating requires at least {requiredBalance} {tokenName}, but you only have {currentBalance}. Unwithdrawn rewards are not included in this amount",
+  "wallet.insufficientFunds.subtitle": "参与需要至少{requiredBalance}{tokenName}，但你仅有{currentBalance}。未提取的奖励不计入此金额。",
   "wallet.insufficientFunds.title": "资金不足",
   "wallet.nav.addButton": "添加新钱包",
   "wallet.nav.allWalletsLabel": "所有钱包",
@@ -578,7 +578,7 @@
   "wallet.receive.page.outputAmountUTXO": "余额（UTXO总和）",
   "wallet.receive.page.rewardAddressLine1": "奖励地址存放着您的奖励，用于验证委托偏好的任何改变。",
   "wallet.receive.page.rewardAddressLine2": "您无法将{ticker} 发送至奖励地址，但我们显示出来，为审计之用。",
-  "wallet.receive.page.unmangeLabel": "纠正授权偏好",
+  "wallet.receive.page.unmangeLabel": "纠正委托偏好",
   "wallet.receive.page.verifyAddressLabel": "校验地址",
   "wallet.receive.page.walletAddressLabel": "您的钱包地址",
   "wallet.receive.page.walletReceiveInstructions": "分享此钱包地址以接收付款。<br>为保护您的隐私，在您使用该地址后会自动生成新地址。",
@@ -654,7 +654,7 @@
   "wallet.settings.export.label": "导出钱包",
   "wallet.settings.name.label": "钱包名称",
   "wallet.settings.passwordLastUpdated": "上次更新的 {lastUpdated}",
-  "wallet.settings.publicExport.explanationLine1": "The below you can find your wallet's <strong>public</strong> key information.",
+  "wallet.settings.publicExport.explanationLine1": "在下方你可以找到您的钱包的<strong>公钥</strong>信息。",
   "wallet.settings.publicExport.reason1": "在Yoroi移动版中以只读模式打开钱包以便随时查看余额",
   "wallet.settings.publicExport.reason2": "与税务软件分享您的密钥自动生成税务报告",
   "wallet.settings.remove.explanation": "删除钱包不会影响钱包余额。您的钱包可以随时恢复。",
@@ -690,7 +690,7 @@
   "wallet.transaction.assuranceLevel.medium": "中",
   "wallet.transaction.certificate.GenesisKeyDelegation": "Genesis key delegation",
   "wallet.transaction.certificate.MoveInstantaneousRewardsCert": "手动奖励",
-  "wallet.transaction.certificate.OwnerStakeDelegation": "权益池主权益授权",
+  "wallet.transaction.certificate.OwnerStakeDelegation": "权益池主权益委托",
   "wallet.transaction.certificate.PoolRegistration": "权益池注册",
   "wallet.transaction.certificate.PoolRetirement": "权益池退役",
   "wallet.transaction.certificate.PoolUpdate": "权益池更新",
