Change wording for sendall of primary asset

--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -87,6 +87,7 @@
   "global.labael.undelegate": "Undelegate",
   "global.label.addToAddressbook": "Add to address book",
   "global.label.allow": "Allow",
+  "global.label.assets": "assets",
   "global.label.choose": "Choose",
   "global.labels.LearnMore": "Learn more",
   "global.labels.addMemo": "Add memo",
