--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -71,6 +71,8 @@
   "daedalusTransfer.waiting.warning": "This may take a long time or fail on poor internet connections",
   "decryption.label": "Decryption password",
   "global.blog.learnMore": "You can read our {blogLink} to learn more.",
+  "global.connector.connectedWebsites": "Connected Websites",
+  "global.connector.messageReadOnly": "We are granting read-only to view utxos/addresses.",
   "global.contact": "contact support",
   "global.copyTooltipMessage": "Copied",
   "global.errors.fieldIsRequired": "This field is required.",
@@ -121,7 +123,7 @@
   "global.labels.shelleyLabel": "Shelley",
   "global.labels.spendingKey": "Spending key",
   "global.labels.spendingKeyHash": "Spending key hash",
-  "global.labels.stakepool": "!!!Stakepool Name",
+  "global.labels.stakepool": "Stakepool Name",
   "global.labels.stakingKey": "Staking key",
   "global.labels.stakingKeyHash": "Staking key hash",
   "global.labels.upgrade": "Upgrade",
@@ -746,9 +748,9 @@
   "wallet.voting.dialog.confirmPin": "Confirm PIN",
   "wallet.voting.dialog.registerLabel": "Register",
   "wallet.voting.dialog.step.confirm.line1": "Please enter the PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.pin.actionButton": "!!!Confirm that I wrote down the PIN",
+  "wallet.voting.dialog.step.pin.actionButton": "Confirm that I wrote down the PIN",
   "wallet.voting.dialog.step.pin.line1": "Please write down this PIN as you will need it <strong>every time</strong> you want to access the Catalyst Voting app.",
-  "wallet.voting.dialog.step.qr.actionButton": "!!!Confirm that I saved the QR code",
+  "wallet.voting.dialog.step.qr.actionButton": "Confirm that I saved the QR code",
   "wallet.voting.dialog.step.qr.line2": "The following QR code is the generated certificate required by the Catalyst App to be able to participate in the voting process of Cardano.",
   "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
   "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
