--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -56,6 +56,12 @@
   "connector.connect.connectedWallets": "Connected Wallets",
   "connector.connect.noWebsitesConnected": "You don't have any websites connected yet",
   "connector.settings.about": "About",
+  "connector.settings.about.dAppDescription": "!!!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, voluptatem animi necessitatibus error libero natus ea obcaecati, illum hic sunt dolorem neque asperiores magnam consequuntur quia quo ad deserunt. Molestias.",
+  "connector.settings.about.dAppInfo": "What is dApp connector?",
+  "connector.settings.about.howItWorks": "How does it work?",
+  "connector.settings.about.howItWorksDescription": "!!!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, voluptatem animi necessitatibus error libero natus ea obcaecati, illum hic sunt dolorem neque asperiores magnam consequuntur quia quo ad deserunt. Molestias.",
+  "connector.settings.supportContact": "Yoroi team will get back to you soon.",
+  "connector.settings.supportText": "Feel free to contact us, if you need some help or you have some other question.",
   "crash.screen.title": "Yoroi crashed",
   "daedalusTransfer.error.noTransferTxError": "There is no transaction to be sent.",
   "daedalusTransfer.error.transferFundsError": "Unable to transfer funds.",
