--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -781,11 +781,13 @@
   "wallet.voting.dialog.title": "Register for Voting",
   "wallet.voting.dialog.transactionLabel": "Transaction",
   "wallet.voting.keepDelegated": "Your voting power is how much you delegate and the voting rewards will be distributed to your delegation reward address. Please keep delegated until the voting ends.",
+  "wallet.voting.ledgerNanoRequirement": "<a target=\"_blank\" rel=\"noopener noreferrer\" href=\"https://emurgo.github.io/yoroi-extension-ledger-connect-vnext/catalyst#/update-ledger-app\">Update</a>the Cardano app on your Ledger to version 2.3.2 or above with <a target=\"_blank\" rel=\"noopener noreferrer\" href=\"https://www.ledger.com/ledger-live\"> Ledger Live</a>.",
   "wallet.voting.line2": "Before you begin, make sure to complete steps below",
   "wallet.voting.line3": "Download the Catalyst Voting App.",
   "wallet.voting.line4": "Open the Catalyst Voting App and click on the Complete registration button.",
   "wallet.voting.lineTitle": "Register to vote on Fund { round }",
   "wallet.voting.notDelegated": "You have not delegated. Your voting power is how much you delegate and the voting rewards will be distributed to your delegation reward address. Please make sure to delegate before voting.",
+  "wallet.voting.trezorTRequirement": "<a target=\"_blank\" rel=\"noopener noreferrer\" href=\"https://wiki.trezor.io/User_manual:Updating_the_Trezor_device_firmware\">Update</a> your Trezor Model T firmware version to ?.?.? or above.",
   "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} {ticker} from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copy to clipboard",
   "widgets.explorer.tooltip": "Go to {websiteName}",
