--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -774,7 +774,9 @@
   "wallet.voting.dialog.step.qr.line3": "Also we suggest to take a screenshot of it as a backup — you won’t be able to access this QR code after clicking Complete.",
   "wallet.voting.dialog.step.qr.lineTitle": "Use the Catalyst Voting App to scan the QR code",
   "wallet.voting.dialog.step.register.line1": "Enter your spending password to be able to generate the required certificate for voting.",
+  "wallet.voting.dialog.step.trx.ledger.info.line.1": "After connecting your Ledger device to your computer’s USB port, press the Register button.",
   "wallet.voting.dialog.step.trx.line1": "Confirm your spending password to register in the blockchain the certificate previously generated for voting.",
+  "wallet.voting.dialog.step.trx.trezor.info.line.1": "After connecting your Trezor device to your computer, press the Register button.",
   "wallet.voting.dialog.stepConfirm": "Confirm",
   "wallet.voting.dialog.stepPin": "PIN",
   "wallet.voting.dialog.stepQrCode": "QR Code",
