--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -537,6 +537,7 @@
   "wallet.hw.common.error.101": "Necessary permissions were not granted by the user. Please retry.",
   "wallet.hw.incorrectDevice": "Incorrect device detected. Expected device {expectedDeviceId}, but got device {responseDeviceId}. Please plug in the correct device",
   "wallet.hw.incorrectVersion": "Incorrect device version detected. We support version {supportedVersions} but you have version {responseVersion}.",
+  "wallet.hw.ledger.catalyst.unsupported.106": "Please upgrade your Ledger firmware version to at least 2.0.0 and Caradano app version to 2.3.2 or above.",
   "wallet.hw.ledger.common.error.101": "Operation cancelled on Ledger device.",
   "wallet.hw.ledger.common.error.102": "Operation cancelled by user.",
   "wallet.hw.ledger.common.error.103": "Ledger device is locked, please unlock it and retry.",
