--- a/packages/yoroi-extension/app/i18n/locales/cs-CZ.json
+++ b/packages/yoroi-extension/app/i18n/locales/cs-CZ.json
@@ -195,11 +195,11 @@
   "noticeBoard.topbar.title": "Notification",
   "notprod.label.message": "WARNING: non-production build. If unexpected, double-check Yoroi installation.",
   "profile.complexityLevel.advanced": "Advanced",
-  "profile.complexityLevel.advanced.description": "I have a some understanding of blockchain and how cryptography is used to power both the blockchain itself and wallet software. I am okay with seeing options and functionality that critically depend on my understanding of these concepts.",
-  "profile.complexityLevel.selected.label": "Your currently level of Complexity is",
+  "profile.complexityLevel.advanced.description": "I have some understanding of blockchain and how cryptography is used to power both the blockchain itself and the wallet software. I am okay with seeing options and functionality that critically depend on my understanding of these concepts.",
+  "profile.complexityLevel.selected.label": "Your current level of Complexity is",
   "profile.complexityLevel.simple": "Simple",
-  "profile.complexityLevel.simple.description": "Simplest experience possible. No previous knowledge in Blockchain required. Highly friendly to on-board beginners, and for users that prefer simplicity.",
-  "profile.complexityLevel.subtitle": "Understanding blockchain can be difficult, which is why we will try and keep the interface as simple as possible for you",
+  "profile.complexityLevel.simple.description": "Simplest experience possible. No previous knowledge of blockchain required. Highly friendly to on-board beginners, and for users who prefer simplicity.",
+  "profile.complexityLevel.subtitle": "We understand blockchain can be difficult, which is why we try and keep the interface as simple as possible for you",
   "profile.complexityLevel.title": "Level of Interface Complexity",
   "profile.languageSelect.form.languageSelectLabel": "Select your language",
   "profile.languageSelect.title": "Language Select",
