--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -660,6 +660,7 @@
   "wallet.send.ledger.confirmationDialog.info.line.1": "After connecting your Ledger device to your computer's USB port, press the Send using Ledger button.",
   "wallet.send.ledger.confirmationDialog.info.line.2": "Make sure the Cardano ADA app remains open on the Ledger device throughout the process.",
   "wallet.send.ledger.confirmationDialog.submit": "Send using Ledger",
+  "wallet.send.tezor.error.firmwareCatalystSupport": "Registering for Catalyst voting requires Trezor firmware 2.4.1",
   "wallet.send.trezor.confirmationDialog.info.line.1": "After connecting your Trezor device to your computer, press the Send using Trezor button.",
   "wallet.send.trezor.confirmationDialog.info.line.2": "A new tab will appear. Please follow the instructions in the new tab.",
   "wallet.send.trezor.confirmationDialog.submit": "Send using Trezor",
