--- a/packages/yoroi-extension/app/i18n/locales/en-US.json
+++ b/packages/yoroi-extension/app/i18n/locales/en-US.json
@@ -655,6 +655,8 @@
   "wallet.send.form.receiver.hint": "Wallet Address",
   "wallet.send.form.receiver.label": "Receiver",
   "wallet.send.form.sendAll.dropdownAmountLabel": "Send all {currency}",
+  "wallet.send.form.sendAll.selectedAmountLable": "Amount Options",
+  "wallet.send.form.sendAll.customAmount": "Custom Amount",
   "wallet.send.form.sendAll.allTokens": " + all tokens",
   "wallet.send.form.sendingIsDisabled": "Cannot send a new transaction while an existing one is still pending.",
   "wallet.send.form.transactionFeeError": "Not enough Ada for fees. Try sending a smaller amount.",
